feat: added reindex logic for test cases